--- a/styles.css
+++ b/styles.css
@@ -70,9 +70,11 @@ figure {
 }
 
 figure img {
-    width: 70%;
+    width: 85%;
     height: auto;
     display: block;
+    margin: 0 auto;
+    max-width: 500px;
 }
 
 figcaption {
